tests/functional/cases/fail/test_syntax5.coil
some!invalid_path: 1
